--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
         "url": "https://github.com/zone117x/node-cryptonote-pool.git"
     },
     "dependencies": {
-        "bignum": "0.12.5",
         "async": "1.5.2",
-        "redis": "0.12.1",
-        "cli-color": "1.1.0",
-        "dateformat": "1.0.12",
         "base58-native": "0.1.4",
+        "bignum": "git://github.com/justmoon/node-bignum.git",
+        "cli-color": "1.1.0",
+        "cryptonote-util": "git://github.com/Snipa22/node-cryptonote-util#xmr-Nan-2.0",
+        "dateformat": "1.0.12",
         "multi-hashing": "git://github.com/zone117x/node-multi-hashing.git",
-        "cryptonote-util": "git://github.com/Snipa22/node-cryptonote-util#xmr-Nan-2.0"
+        "redis": "0.12.1"
     },
     "engines": {
         "node": ">=0.10"
