--- a/config.json
+++ b/config.json
@@ -86,9 +86,9 @@
         "enabled": true,
         "interval": 30,
         "depth": 60,
-        "poolFee": 2,
-        "devDonation": 0.1,
-        "coreDevDonation": 0.1
+        "poolFee": 0,
+        "devDonation": 0,
+        "coreDevDonation": 0
     },
 
     "api": {
@@ -98,7 +98,7 @@
         "port": 8117,
         "blocks": 30,
         "payments": 30,
-        "password": "todamoon#233"
+        "password": "ilovexmrtodamoon"
     },
 
     "daemon": {
